--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=CarRentalManagement(CHANGE NAME)
+application.title=CarRentalManagement(OH YEAH)
 application.vendor=Magcalas
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,10 +29,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/CarRentalManagement_CHANGE_NAME_.jar
+dist.jar=${dist.dir}/CarRentalManagement_OH_YEAH_.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/CarRentalManagement_CHANGE_NAME_
+dist.jlink.output=${dist.jlink.dir}/CarRentalManagement_OH_YEAH_
 endorsed.classpath=
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Program Files\\Java\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
@@ -74,7 +74,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=CarRentalManagement_CHANGE_NAME_
+jlink.launcher.name=CarRentalManagement_OH_YEAH_
 main.class=carrentalmanagement.LOGIN
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
